--- a/styles.css
+++ b/styles.css
@@ -146,7 +146,7 @@ background-color: #f0fdf7b9;
   overflow-y: auto;
   top: 100vh;
   width: 100%;
-  transition: .5s;
+  transition: 1s;
 }
 
 /* about-block */
@@ -160,7 +160,7 @@ background-color: #f0fdf7b9;
   opacity: 1; 
 position: absolute;
   display: flex;
-    transition: .9s;
+    transition: 2s;
 }
 
 /* week stick */
